--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <div class="max-width-wrapper">
+      <div class="max-width-wrapper bg-white">
         <div class="intro-chunk">
           <h1 class="title">Huckleberry</h1>
 
@@ -29,8 +29,8 @@
       </div>
     </header>
     <main>
-      <section class="max-width-wrapper">
-        <div class="card">
+      <section class="max-width-wrapper bg-dark">
+        <div class="card bg-white">
           <h2 class="indented-heading">
             Wealth comes from operations
           </h2>
